# kinopolka

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  WARP.md  cleaneup_posters.sh  compress_static.sh  docker-compose.yaml  example_env.sh  example_start.sh  manage.py  pyproject.toml  start.sh  sync_from_remote.sh  test.py  заметки.txt
.github/workflows/: deploy_to_remote_vps.yml
bar/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
bar/migrations/: 0001_initial.py  0002_remove_cocktail_description.py  0003_alter_cocktail_image_alter_cocktailingredient_unit_and_more.py  0004_alter_cocktail_image_alter_ingredient_image.py  0005_alter_cocktail_image_alter_ingredient_image.py  0006_alter_cocktailingredient_unit.py
classes/: __init__.py  app_user.py  bar.py  caching.py  cocktail.py  error.py  exception_handler.py  exceptions.py  ingredient.py  invitation.py  kp.py  movie.py  note.py  notification_sender.py  photo.py  postcard.py  statistic.py  tg.py  tools.py  user.py
data/: api_response.json  archive_movies_dump.json  movies_to_watch_dump.json
features/: admin.py  models.py  serializers.py  urls.py  views.py
features/migrations/: 0001_initial.py
filmoclub/: asgi.py  settings.py  tests.py  urls.py  view.py  wsgi.py
filmoclub/calendar/: theme_calendar.py  theme_images.py  theme_settings.py
lists/: __init__.py  admin.py  models.py  serializers.py  urls.py  validators.py  views.py
lists/management/commands/: download_posters.py  fix_posters_names.py  update_recent_movies.py
lists/migrations/: 0001_initial.py  0002_rename_models.py  0003_remove_note_user_film_key_and_more.py  0004_add_emails.py  0005_movie_poster_local.py  0006_alter_movie_poster_local.py  0007_alter_user_avatar.py
mixins/: __init__.py  global_data.py
postcard/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
postcard/management/commands/: delete_unused_postcards.py
postcard/migrations/: 0001_initial.py  0002_alter_postcard_created_at.py  0003_alter_postcard_created_at_alter_postcard_movies.py  0003_postcard_background_picture_postcard_is_active_and_more.py  0004_alter_postcard_created_at.py  0004_rename_background_picture_postcard_screenshot_and_more.py  0005_alter_postcard_created_at.py  0005_postcard_background_picture_postcard_is_active_and_more.py  0006_alter_postcard_options_alter_postcard_created_at.py
postcard/migrations_backup/: 0001_initial.py  0002_alter_postcard_created_at.py
pydantic_models/: __init__.py  kp_movie_api.py  rate_movie_request.py
scripts/: backup_db.sh  backup_vps_settings.sh  compress_animated_webp.py  compress_static.sh  sync_from_remote.sh
settings/: application.py  theme_calendar.py  theme_images.py
static/css/: add_movie.css  bar.css  based_layout.css  global_settings.css  main.css  movies.css  postcard.css  postcards_archive.css  statistic.css  variables.css
static/css/base/: typography.css
static/css/elements/: boom_icon.css  confirmation_tooltip.css  filter.css  order.css  postcard_header.css  rating_modal.css  rating_notes.css  scroll_up_button.css  sort.css  toast.css  user_requirement_modal.css
static/css/features/: catalog.css  photos.css  postcards_archive.css  statistic.css  tarot.css
static/css/features/casino/: 8ball.css  cards.css  casino.css  roulette.css  slots.css  tournament.css
static/css/themes/: new_year.css
static/css/utils/: layout.css
static/js/: add_movie.js  bar.js  based_layout.js  movies.js  postcard.js  postcards_archive.js  postcards_archive2.js  postcards_archive_old.js
static/js/bar/: cocktails.js  ingredients.js
static/js/based_layout/: movies_cart.js  navigationToggle.js  setup_user.js  theme_toggle.js
static/js/features/: carousel.js  photos.js  postcards_archive.js  statistic.js  tarot.js
static/js/features/casino/: 8ball.js  cards.js  roulette.js  slots.js  tournament.js
static/js/mobile/: touch.js
static/js/movie/: booked_toggler.js  card_filling.js  fetching.js  filter.js  order.js  paintBookedMovies.js  poster_placeholder.js  rating_modal.js  rating_note.js  rating_toggler.js  select_options.js  sort.js
static/js/movie/options/: archive.js  book.js  rate.js  remove.js
static/js/postcard/: create_postcard.js  movies_cart.js  save_postcard.js  screenshot.js  send_postcard_invitation.js
static/js/themes/: new_year.js
static/js/utils/: base64encode.js  capitalise.js  confirm_modal_action.js  cookie.js  create_toast.js  format_time.js  get_random_item.js  next_saturday.js  request.js  screenshot.js  show_modal.js  shuffle.js
statistic/: urls.py  views.py
templates/: add_movie.html  bar.html  based_layout.html  email.html  movies.html  postcard.html  postcards_archive.html  postcards_archive2.html  postcards_archive_old.html  robots.txt  sitemap.xml  statistic.html  tarot_old.html
templates/elements/: confirmation_tooltip.html  email.html  filter.html  movie_card.html  order.html  postcard_header.html  rating_modal.html  scroll_up_button.html  sort.html  toast.html  user_requirement_modal.html
templates/errors/: 400.html  401.html  403.html  404.html
templates/experements/: gta.html  stars.html
templates/features/: bar.html  carousel.html  casino.html  catalog.html  features_catalog.html  gym.html  photos.html  postcards_archive.html  statistic.html  tarot.html
templates/features/casino/: 8ball.html  cards.html  casino_base.html  roulette.html  slots.html  tournament.html
tools/: serializers.py  urls.py  views.py
tools/management/commands/: update_theme_calendar.py
utils/: __init__.py  change_local_films_archive_status.py  create_theme_calendar.py  drf_exception_handler.py  exception_handler.py  exceptions.py  extract_movies_ids.js  middleware.py  movies_ids.py  request_kp_movie.py  response_handler.py  tests.py  top_secret.py
