[project]
name = "filmoclub"
version = "1.0.0"
description = "Cinephiles with tea"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.2",
    "djangorestframework>=3.15.2",
    "pendulum>=3.0.0",
    "httpx[http2]>=0.27.2",
    "diskcache>=5.6.3",
    "django-cors-headers>=4.5.0",
    "pydantic>=2.9.2",
    "adrf>=0.1.8",
    "pandas>=2.2.3",
    "numpy>=2.1.3",
    "plotly>=5.24.1",
    "pillow>=11.0.0",
    "python-telegram-bot>=22.0",
    "python-logging-loki-v2>=0.4.4",
    "drf-yasg>=1.21.10",
    "uvicorn>=0.35.0",
    "colorama>=0.4.6",
    # не dev: top_secret.py (баннер в start.sh) и management-команды
    # используют их в проде
    "cowsay>=6.1",
    "icecream>=2.1.3",
    "whitenoise>=6.9.0",
    "django-extensions>=4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "notebook>=7.3.3",
    "ipython>=8.34.0",
    "jupyterlab>=4.3.6",
    "ruff>=0.12.8",
    "pre-commit>=4.6.0",
]


[tool.ruff]
# Уровень детализации сообщений
#verbosity = 1
output-format = "concise"

# Исключение файлов
exclude = [
    "**/migrations/",
    "**/__pycache__/",
    "*.pyi",
    "*.ipynb",
    "static/",
]

# Максимальная длина строки
line-length = 120

# Целевая версия Python
target-version = "py310"


# Включенные правила
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "A",   # flake8-builtins
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "RUF", # ruff-specific rules
    "DJ",  # Django-specific rules
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
    "C901", # Ограничение сложности функций
    "ASYNC",  # Проверки асинхронного кода
]

ignore = [
    "E501",  # Длина строки (если кириллица "ломает" подсчёт символов)
    "D",     # Игнорировать все pydocstyle-правила (если ругается на docstrings)

    # Кириллица в коде/комментариях ruff считает "неоднозначной"
    "RUF001",
    "RUF002",
    "RUF003",

    # Осознанно отключено под текущую кодовую базу (стиль / Django-идиомы)
    "RUF012",  # mutable default в атрибутах класса (норма для Django-моделей)
    "RUF005",  # конкатенация литералов-коллекций
    "RUF009",  # вызов функции в default у dataclass-поля
    "RUF013",  # неявный Optional в аннотации
    "DJ008",   # модель без __str__
    "DJ001",   # nullable строковое поле модели
    "UP038",   # isinstance без синтаксиса pep604
    "UP045",   # Optional[...] вместо ... | None
    "C408",    # лишний вызов dict()/list()
    "C401",    # лишний генератор для set
    "C414",    # двойное преобразование коллекции
    "SIM102",  # вложенные if можно слить
    "PIE810",  # несколько startswith/endswith одним вызовом
    "B007",    # неиспользуемая переменная цикла
    "B018",    # бесполезное выражение

    # ТЕХДОЛГ: реальные замечания, временно отключены, чтобы не блокировать коммиты.
    # Стоит постепенно поправить в коде и убрать отсюда (вернув проверку).
    "ASYNC230", # блокирующий open() в async-функции

]

[tool.ruff.lint.mccabe]
max-complexity = 10

# Игнорирование правил для конкретных файлов
[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/settings.py" = ["F403", "E501"]
"**/models.py" = ["DJ01"]


# Настройки isort
[tool.ruff.lint.isort]
known-first-party = ["filmoclub"]
known-third-party = ["django", "rest_framework", "pydantic", "pandas", "matplotlib"]
combine-as-imports = true  # Объединять from ... import as
force-single-line = false  # Не принудительно разделять импорты на отдельные строки
force-sort-within-sections = true  # Сортировать импорты внутри секций
lines-after-imports = 2  # Две пустые строки после импортов (как в black/isort)
